--- a/src/app/nichos/configuracion-general/configuracion-general.component.html
+++ b/src/app/nichos/configuracion-general/configuracion-general.component.html
@@ -4,6 +4,7 @@
         <p-progressSpinner ariaLabel="loading" />
     </div>
     <ng-container *ngIf="!loading">
+        <p-toast key="tst"></p-toast>
         <div class="col-12">
             <div class="card">
                 <h1>Configuración general</h1>
